[gd_scene load_steps=4 format=3 uid="uid://btg2nslf8x5hj"]

[ext_resource type="Script" path="res://script/papersheets.gd" id="1_sbyyx"]
[ext_resource type="Texture2D" uid="uid://c2rtoieiq1he5" path="res://assets/bookimg/ahmadhusein.jpeg" id="2_6v4ao"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ootf"]
bg_color = Color(0.941365, 0.941365, 0.941365, 1)
border_width_left = 10
border_width_top = 5
border_width_right = 5
border_width_bottom = 10

[node name="papersheets" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sbyyx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -298.5
offset_right = 191.0
offset_bottom = 298.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ootf")

[node name="title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 27.5
offset_right = 149.0
offset_bottom = 50.5
theme_override_colors/font_color = Color(0.111197, 0.111197, 0.111197, 1)
text = "Ulangan Sejarah"

[node name="title2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 53.5
offset_right = 219.0
offset_bottom = 76.5
theme_override_colors/font_color = Color(0.289741, 0.289741, 0.289741, 1)
theme_override_font_sizes/font_size = 11
text = "Sejarah Pemberontakan di Indonesia"

[node name="title3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 316.0
offset_top = 23.5
offset_right = 357.0
offset_bottom = 46.5
theme_override_colors/font_color = Color(0.289741, 0.289741, 0.289741, 1)
theme_override_font_sizes/font_size = 11
text = "Bayu"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 85.0
offset_right = 364.0
offset_bottom = 561.0

[node name="image" type="TextureRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
texture = ExtResource("2_6v4ao")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Soal ini adalah bagaimana?"
autowrap_mode = 2

[node name="opt1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "A. test here"
flat = true
alignment = 0
autowrap_mode = 2

[node name="opt2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "B. test here"
flat = true
alignment = 0
autowrap_mode = 2

[node name="opt3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "C. test here"
flat = true
alignment = 0
autowrap_mode = 2

[node name="opt4" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "D. test here"
flat = true
alignment = 0
autowrap_mode = 2
